<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_image"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="56dp"
        android:layout_marginTop="96dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="293dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/book_your_appointment_with_us_today"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="109dp"
        android:layout_height="65dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="76dp"
        android:text="@string/got_an_account"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/loginBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="68dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="61dp"
        android:layout_marginTop="64dp"
        android:text="@string/new_user"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/signUp_btn"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="76dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>